# strand-agent-poc

./: .env.example  .gitignore  README.md  pyproject.toml  query_memory.py  requirements.txt  trace.md
src/strand_agent_poc/: __init__.py  __main__.py  agent.py  main.py  requirements.txt  strands_agent_logic_doc.md
src/strand_agent_poc/api/: __init__.py  api.py
src/strand_agent_poc/core/: __init__.py  executor.py  memory_utils.py  model.py  plan_execute_reflect_agent.py  planner.py  query_memory_proposed-1755251354594.py
src/strand_agent_poc/core/prompt_management/: parameters.md  prompts.py
src/strand_agent_poc/core/session_manager/: __init__.py  agent_core_session.py
src/strand_agent_poc/repl_state/: repl_state.pkl
src/strand_agent_poc/tests/: test_agent.py
